@@ -21,6 +21,8 @@ Version 1.4.21 - SVN
   - Fixed minor vulnerability in Mail Fetch plugin [CVE-2010-1637/TEHTRI-SA-2010-009]
   - Now properly quote personal part of encoded addresses when replying.
   - Now fill in default subject when forwarding as attachment (#2936541).
+  - Implement header folding that doesn't add extraneous spaces so unfolding
+    is less ambiguous (#1951776).
 
 Version 1.4.20 - 06 Mar 2010
 ---------------------------
